--- a/package.json
+++ b/package.json
@@ -15,5 +15,26 @@
   "bugs": {
     "url": "https://github.com/miahal7/simple-ledger/issues"
   },
-  "homepage": "https://github.com/miahal7/simple-ledger#readme"
+  "homepage": "https://github.com/miahal7/simple-ledger#readme",
+  "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.7",
+    "eslint": "^3.9.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-config-airbnb-base": "^8.0.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.5.0",
+    "webpack": "^1.13.3"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.18.0",
+    "bcrypt": "^1.0.2",
+    "fibers": "1.0.15",
+    "highcharts": "4.2.6",
+    "lodash": "4.16.6",
+    "meteor-node-stubs": "0.2.3",
+    "node-sass": "3.12.5"
+  }
 }
