--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-runtime": "^6.18.0",
     "bcrypt": "^1.0.2",
     "fibers": "1.0.15",
+    "headroom.js": "^0.9.3",
     "highcharts": "4.2.6",
     "lodash": "4.16.6",
     "meteor-node-stubs": "0.2.3",
