--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
     app:
-        image: simple-ledger:0.0.1
+        image: miahal7/simple-ledger:0.0.1
         links:
             - db
     db:
