--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3.1'
 services:
     app:
         image: miahal7/simple-ledger:0.0.1
+        volumes:
+          - ~/config/nginx/app-server.conf:/etc/nginx/sites-enabled/app-server.conf
         links:
             - db
     db:
@@ -17,8 +19,10 @@ services:
     proxy:
         image: nginx
         ports:
-            - "8090:80"
+            - 443:443
         volumes:
-            - "${PWD}/nginx/nginx.conf:/etc/nginx/nginx.conf"
+            - ~/config/certs/simple-ledger.crt:/etc/nginx/simple-ledger.crt
+            - ~/config/certs/simple-ledger.key:/etc/nginx/simple-ledger.key
+            - ~/config/nginx/nginx.conf:/etc/nginx/nginx.conf
         depends_on:
             - app
