--- a/nginx/app-server.conf
+++ b/nginx/app-server.conf
@@ -1,32 +1,15 @@
-# Located in container at /etc/nginx/sites-enabled/keyforms.conf:
 server {
     listen 80;
-    server_name www.webapp.com;
+    server_name simple-ledger;
     root /home/app/public;
 
-    # The following deploys your Ruby/Python/Node.js/Meteor app on Passenger.
-
-    # Not familiar with Passenger, and used (G)Unicorn/Thin/Puma/pure Node before?
-    # Yes, this is all you need to deploy on Passenger! All the reverse proxying,
-    # socket setup, process management, etc are all taken care automatically for
-    # you! Learn more at https://www.phusionpassenger.com/.
+    # The following deploys Ruby/Python/Node.js/Meteor app on Passenger.
     passenger_enabled on;
     passenger_sticky_sessions on;
     passenger_app_type node;
     passenger_startup_file main.js;
     passenger_user app;
     passenger_app_env production;
-    passenger_env_var MONGO_URL mongodb://45.55.230.236:27017/meteor;
-    passenger_env_var ROOT_URL http://45.55.230.236:3000;
-
-    # If this is a Ruby app, specify a Ruby version:
-    # passenger_ruby /usr/bin/ruby2.4;
-    # For Ruby 2.3
-    # passenger_ruby /usr/bin/ruby2.3;
-    # For Ruby 2.2
-    # passenger_ruby /usr/bin/ruby2.2;
-    # For Ruby 2.1
-    # passenger_ruby /usr/bin/ruby2.1;
-    # For Ruby 2.0
-    # passenger_ruby /usr/bin/ruby2.0;
+    passenger_env_var MONGO_URL mongodb://<user>:<pw>@<ip or domain url>:<port>/<auth-db>;
+    passenger_env_var ROOT_URL http<s>://<ip or domain url>;
 }
